--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,11 @@ import:
   - redis
 - package: github.com/mitchellh/mapstructure
 - package: github.com/satori/go.uuid
+- package: gopkg.in/yaml.v2
+- package: github.com/labstack/gommon
+  subpackages:
+  - log
+- package: github.com/labstack/echo
+  subpackages:
+  - middleware
+- package: github.com/shirou/gopsutil
