backend: Implement basic RunVM command
* Exposed websocket endpoint accepting JSON commands
* Can Add VMs with name/mem_size
* Can Run VM by ID

--- a/glide.yaml
+++ b/glide.yaml
@@ -17,3 +17,7 @@ import:
   - middleware
 - package: github.com/shirou/gopsutil
 - package: github.com/elazarl/go-bindata-assetfs
+- package: github.com/gorilla/websocket
+- package: gopkg.in/igm/sockjs-go.v2
+  subpackages:
+  - sockjs
