--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A VERy DIstributed IaaS application prototype",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot",
+    "start": "node server",
     "build": "npm run test && NODE_ENV=production webpack -p -progress",
     "test": "eslint frontend/src frontend/test --ext js,jsx"
   },
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
+    "http-proxy": "^1.14.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
